# cat-dist

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cxx-build-and-test.yml
examples/: CMakeLists.txt  README.md  data_fitting.cc  random_permutation.cc  random_weighted.cc
include/: node_traits.h
include/cat_dist/: auto_balanced_tree.h  categorical_distribution.h  node_traits.h
tests/: CMakeLists.txt  auto_balanced_tree_test.cc  categorical_distribution_test.cc  helpers.h
